Challenges: auto 24h rotation, 20 challenge pool, GUI with player heads leaderboard, /claim command